# claude-code-history-analysis

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
claude_history/: __init__.py  __main__.py  catalog.py  discovery.py  errors.py  filters.py  html_theme.py  parsing.py  timestamps.py
docs/: 2026-03-21-catalog-design.md  2026-04-01-search-design.md  2026-04-01-search-plan.md  ANALYSIS_TOOLS_README.md  DAILY_FAILURE_REPORTS_README.md  INDEX.md  code_review_claude_history_module.md
docs/guidelines/: GUIDELINES.md
docs/guides/: NONEXISTENT_TOOLS_ANALYSIS.md  READ_TOOL_PARAMETER_GUIDE.md  WINDOWS_COMPATIBILITY_GUIDE.md
prompts/: generate_guidelines.txt
tools/: analyze_failures.py  analyze_history.py  cli.py  daily_reports.py  report.py  search.py  timeline.py
