[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-history"
version = "0.1.0"
description = "Analysis tools for Claude Code session histories"
requires-python = ">=3.8"
dependencies = [
    "typer",
    "InquirerPy",
]

[project.scripts]
claude-history = "tools.cli:app"

[tool.setuptools.packages.find]
include = ["claude_history*", "tools*"]
